fix: filter height overflow

--- a/static/css/controls.scss
+++ b/static/css/controls.scss
@@ -228,6 +228,9 @@ input[type="radio"] {
     }
     &__content {
         flex: 1 0 auto;
+        max-height: calc(100% - 120px);
+        margin-bottom: 20px;
+        overflow-y: auto;
     }
     &__decline-button {
         height: 48px;
@@ -275,13 +278,12 @@ input[type="radio"] {
         }
     }
     &__content {
-        margin-bottom: 24px;
+        margin-bottom: 5px;
     }
 }
 
 .filter {
     display: -webkit-box;
-    margin: 0 -6px;
     &__item {
         border: none;
         padding: 6px 14px;
